Modify notebooks and add cached csv files

--- a/1-Scores.ipynb
+++ b/1-Scores.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "import glob\n",
+    "import os\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -20,6 +21,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1532029e-b431-4788-8f7e-526489e05ecf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CACHE_DIR = 'cache'\n",
+    "OUTPUT_DIR = 'output'\n",
+    "for directory in [CACHE_DIR, OUTPUT_DIR]:\n",
+    "    os.makedirs(directory, exist_ok=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "rising-efficiency",
    "metadata": {},
@@ -29,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "brave-courage",
    "metadata": {},
    "outputs": [
@@ -116,7 +130,7 @@
        "9  /home/nevena/data_tsanfleuron/mps/simu_mps_par..."
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "handed-collector",
    "metadata": {},
    "outputs": [
@@ -140,7 +154,7 @@
        "504"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "collective-words",
    "metadata": {},
    "outputs": [],
@@ -182,22 +196,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "worth-courage",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Computes around an hour if vol_scores missing!\n",
+    "cached_vol_scores = f'{CACHE_DIR}/vol_scores.csv'\n",
     "try:\n",
-    "    df_vol_scores = pd.read_csv('vol_scores.csv')\n",
+    "    df_vol_scores = pd.read_csv(cached_vol_scores)\n",
     "except FileNotFoundError:\n",
     "    df_vol_scores = df.apply(lambda row: evaluate_volume_estimation(row), axis=1)\n",
-    "    df_vol_scores.to_csv('vol_scores.csv')"
+    "    df_vol_scores.to_csv(cached_vol_scores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "familiar-aggregate",
    "metadata": {},
    "outputs": [
@@ -302,7 +317,7 @@
        "4     0.272500            3.031496         0.177027                4.175288  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "wound-specialist",
    "metadata": {},
    "outputs": [],
@@ -340,23 +355,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "recognized-venice",
    "metadata": {},
    "outputs": [],
    "source": [
     "# All is gathered in the dataframe\n",
     "# computes in couple of minutes if all_scores.csv missing\n",
+    "cached_all_scores = f'{CACHE_DIR}/all_scores.csv'\n",
     "try:\n",
-    "    df_all_scores = pd.read_csv('all_scores.csv')\n",
+    "    df_all_scores = pd.read_csv(cached_all_scores)\n",
     "except FileNotFoundError:\n",
     "    df_all_scores = df_vol_scores.apply(lambda row: evaluate_flow(row), axis=1)\n",
-    "    df_all_scores.to_csv('all_scores.csv')"
+    "    df_all_scores.to_csv(cached_all_scores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "cardiovascular-viking",
    "metadata": {},
    "outputs": [
@@ -474,7 +490,7 @@
        "4      0.013634  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "cultural-frame",
    "metadata": {},
    "outputs": [],
@@ -513,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "muslim-digit",
    "metadata": {},
    "outputs": [],
@@ -523,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "contemporary-enlargement",
    "metadata": {},
    "outputs": [
@@ -975,7 +991,7 @@
        "494      0.102395  False  False            2          24              0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "funny-blood",
    "metadata": {},
    "outputs": [
@@ -996,7 +1012,7 @@
        "(420, 13)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "nearby-london",
    "metadata": {},
    "outputs": [],
@@ -1028,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "modular-spanish",
    "metadata": {},
    "outputs": [
@@ -1461,7 +1477,7 @@
        "377      0.019435  True  False           13           0              1  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1481,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "integrated-respect",
    "metadata": {},
    "outputs": [],
@@ -1492,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "continental-humanitarian",
    "metadata": {},
    "outputs": [],
@@ -1516,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "elegant-wellington",
    "metadata": {},
    "outputs": [
@@ -1551,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "finished-thong",
    "metadata": {},
    "outputs": [
@@ -1586,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "insured-infrastructure",
    "metadata": {},
    "outputs": [
@@ -2399,7 +2415,7 @@
        "502      0.118663  False  False           19          24              0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2410,7 +2426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "retained-ethiopia",
    "metadata": {},
    "outputs": [],
@@ -2421,7 +2437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "prerequisite-porcelain",
    "metadata": {},
    "outputs": [
@@ -2456,7 +2472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "caroline-uncertainty",
    "metadata": {},
    "outputs": [
@@ -2491,7 +2507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "national-rubber",
    "metadata": {},
    "outputs": [],
@@ -2502,7 +2518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "super-clock",
    "metadata": {},
    "outputs": [
@@ -2537,7 +2553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "planned-stream",
    "metadata": {},
    "outputs": [
@@ -2580,7 +2596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "affiliated-novelty",
    "metadata": {},
    "outputs": [],
@@ -2601,7 +2617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "stable-campus",
    "metadata": {},
    "outputs": [
@@ -2954,7 +2970,7 @@
        "20    1.972453  1.237382  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2965,7 +2981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "downtown-russell",
    "metadata": {},
    "outputs": [
@@ -2973,7 +2989,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_16160/26740397.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_17522/4000487811.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_paper = df_compare.sort_values(by='crps_volume')[df_compare.hill == False][['method',\n"
      ]
     },
@@ -3151,7 +3167,7 @@
        "krig   0                                5.45         0.047  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3168,7 +3184,7 @@
     "                                                                                                                                             'avg_crps_pointwise':2,\n",
     "                                                                                                                                             'avg_abs_mean_pointwise':2,\n",
     "                                                                                                                                             'mean_JS_flow':3})\n",
-    "with open('paper_table.tex', 'w') as file_handle:\n",
+    "with open(f'{OUTPUT_DIR}/paper_table.tex', 'w') as file_handle:\n",
     "    file_handle.write(df_paper.to_latex())\n",
     "\n",
     "df_paper"
@@ -3176,7 +3192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "vanilla-packing",
    "metadata": {},
    "outputs": [
@@ -3195,7 +3211,7 @@
        " 'avg_abs_mean_pointwise']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3206,7 +3222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "compliant-peripheral",
    "metadata": {},
    "outputs": [
@@ -3569,7 +3585,7 @@
        "0             5.448736         2.910583                5.448736  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3580,7 +3596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "compressed-carter",
    "metadata": {},
    "outputs": [
@@ -3943,7 +3959,7 @@
        "19            4.176811         2.961004                5.612434  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3954,7 +3970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "assured-white",
    "metadata": {},
    "outputs": [
@@ -4317,7 +4333,7 @@
        "19            4.176811         2.961004                5.612434  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4330,14 +4346,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "informed-basics",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "intermediate-thirty",
    "metadata": {},
    "outputs": [],
    "source": []
